--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "author": "Craig Coffman <ch.cr.co@gmail.com>",
   "main": "index",
   "dependencies": {
-      "async": "0.1.22",
-      "socket.io": "0.9.13"
+    "async": "0.1.22",
+    "pg": "^4.4.3",
+    "pg-connection-string": "^0.1.3",
+    "pgpass": "0.0.3",
+    "socket.io": "0.9.13"
   },
   "engines": {
     "node": "*"
