--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "audit-log",
-  "description": "Node Audit Logging Toolkit",
+  "name": "t1t-pg-audit-log",
+  "description": "Node Audit Logging Toolkit Supporting Postgres",
   "version": "0.9.1",
   "keywords": [
     "node",
     "log",
-    "audit"
+    "audit",
+    "postgres"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ccraigc/node-audit-log"
+    "url": "https://github.com/Trust1Team/node-audit-log"
   },
-  "author": "Craig Coffman <ch.cr.co@gmail.com>",
+  "author": "Michallis Pashidis <michallis@trust1team.com>",
   "main": "index",
   "dependencies": {
     "async": "0.1.22",
