--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "t1t-pg-audit-log",
   "description": "Node Audit Logging Toolkit Supporting Postgres",
-  "version": "0.9.1",
+  "version": "0.9.2",
+  "license": "SEE LICENSE IN LICENSE",
   "keywords": [
     "node",
     "log",
